Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,5 +14,10 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 ############################################################################
-
+- task: SSH@0
+  inputs:
+    sshEndpoint: 'auser@13.82.64.79'
+    runOptions: 'commands'
+    commands: 'mkdir test101'
+    readyTimeout: '20000'
 ############################################################################
