--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
     readyTimeout: '20000'
 ############################################################################
 - script: |
-    sudo apt-get install python3-pip
+    python -m pip install --upgrade pip
     python3 -m venv test102
     source test102/bin/activate
     pip3 list
