--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,8 @@ steps:
     sshEndpoint: 'auser@13.82.64.79'
     runOptions: 'commands'
     commands: |
+      sudo apt-get install python3-venv
+      sudo apt-get install python3-pip
       python -m pip install --upgrade pip
       python3 -m venv test102
       source test102/bin/activate
