--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,6 @@ steps:
       python3 -m venv test102
       source test102/bin/activate
       pip3 install -r requirements.txt
-      pip3 list
+      pip3 list --format=legacy
       deactivate
     readyTimeout: '20000'
